--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #3c3c3c;
+  height: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +13,11 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  text-decoration: none;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icon {
+  padding-right: 10px;
 }
